--- a/src/write/write-adaptive.scss
+++ b/src/write/write-adaptive.scss
@@ -1,9 +1,10 @@
 @import "../mixins";
 
 @media (max-width: 1200px) {
-  // Position changes:
-  #content td.write,
-  #content dl.write {
+  // Forum
+  #content td.write:has(textarea),
+  // Vocabulary
+  #content dl.write:has(textarea) {
     top: unset !important;
     bottom: 0 !important;
     right: unset !important;
@@ -32,7 +33,7 @@
   }
 
   // Posts-list repositioning with portrait orientation:
-  body:has(.write:focus-within) #content .minwidth_holyhack {
-    @include content-reposition-focused('portrait');
+  body:has(.write:focus-within) #content .minwidth_container {
+    @include content-reposition-focused("portrait");
   }
 }
