--- a/src/write/write.scss
+++ b/src/write/write.scss
@@ -1,9 +1,9 @@
 @import "../mixins";
 
 // Forum
-#content td.write:not(:has(.write-link)),
+#content td.write:has(textarea),
 // Vocabulary
-#content dl.write {
+#content dl.write:has(textarea) {
   overflow: hidden !important;
   z-index: 1010 !important;
   position: fixed !important;
@@ -114,7 +114,7 @@
 }
 
 // Repositioning for posts and comments when write block is focused
-body:has(.write:focus-within:not(:has(.write-link))) #content .minwidth_holyhack {
+body:has(.write:focus-within) #content .minwidth_container {
   @include content-reposition-focused("landscape");
 }
 
